--- a/source/layouts/home.erb
+++ b/source/layouts/home.erb
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<title><%= current_page.data.title || 'Café Vie Privée' %></title>
 
