--- a/source/layouts/home.erb
+++ b/source/layouts/home.erb
@@ -7,6 +7,8 @@
 		<title><%= current_page.data.title || 'Café Vie Privée' %></title>
 
 		<%= stylesheet_link_tag %w(home) %>
+
+		<link href="/atom.xml" type="application/atom+xml" rel="alternate" title="ATOM Feed" />
 	</head>
 
 	<body role="document">
