--- a/source/atom.xml.erb
+++ b/source/atom.xml.erb
@@ -6,7 +6,7 @@ layout: false
 	<title>Café Vie Privée</title>
 	<subtitle>Chiffrofête / Cryptoparty organisées à Paris et ailleurs</subtitle>
 	<link href="<%=  URI.join config[:site_url], url_for('/') %>"/>
-	<updated>2014-04-21T16:00:00+02:00</updated>
+	<updated>2014-05-26T00:00:00+02:00</updated>
 
 	<entry>
 		<title>Café Vie Privée à Numa le samedi 29 mars 2014 de 15h à 18h</title>
@@ -27,5 +27,20 @@ layout: false
 		<title>Café Vie Privée à l'OpenBidouille Camp le dimanche 25 mai 2014 de 15h à 18h</title>
 		<updated>2014-04-21T16:00:00+02:00</updated>
 		<link href="http://openbidouille.net/post/80174131389/obc-4-le-25-mai-inscrivez-vos-ateliers" />
+	</entry>
+	<entry>
+		<title>Café Vie Privée à l'Ubuntu Party le samedi 24 et dimanche 25 mai 2014 de 11h à 18h</title>
+		<updated>2014-04-30T11:36:00+02:00</updated>
+		<link href="http://ubuntu-paris.org/programme" />
+	</entry>
+	<entry>
+		<title>Café Vie Privée au Poop le samedi 14 et dimanche 15 juin 2014 de 11h à 18h</title>
+		<updated>2014-05-26T00:00:00+02:00</updated>
+		<link href="http://poop.leloop.org/" />
+	</entry>
+	<entry>
+		<title>Café Vie Privée à Pas Sage en Seine du jeudi 26 au dimanche 29 juin 2014 de 11h à 18h</title>
+		<updated>2014-05-26T00:00:00+02:00</updated>
+		<link href="http://www.passageenseine.org/" />
 	</entry>
 </feed>
