--- a/source/index.erb
+++ b/source/index.erb
@@ -30,15 +30,15 @@ layout: home
 			<i>Prochains Cafés Vie Privée</i> :
 			<ul>
 				<li>
-					jeudi <b>24 avril</b> 2014, <b>11h-18h</b>, au
-					<b><a href="http://2014.hackitoergosum.org/">
-						Hacker Space Fest
+					 samedi et dimanche <b>14 et 15 juin</b> 2014, <b>11h-18h</b>, au
+					<b><a href="http://poop.leloop.org/">
+						Poop - Portes Ouvertes Ou Pas
 					</a></b>
 				</li>
 				<li>
-					dimanche <b>25 mai</b> 2014, <b>11h-18h</b>, à l'
-					<b><a href="http://openbidouille.net/post/80174131389/obc-4-le-25-mai-inscrivez-vos-ateliers">
-						Open Bidouille Camp #4
+					du jeudi <b>26</b> au dimanche <b>29 juin</b> 2014, <b>11h-18h</b>, à
+					<b><a href="http://www.passageenseine.org/">
+						Pas Sage En Seine 2014
 					</a></b>
 				</li>
 			</ul>
