--- a/source/layouts/home.erb
+++ b/source/layouts/home.erb
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="shortcut icon" href="/images/favicon.png" type="image/x-png" />
 
 		<title><%= current_page.data.title || 'Café Vie Privée' %></title>
 
