--- a/source/atom.xml.erb
+++ b/source/atom.xml.erb
@@ -6,7 +6,7 @@ layout: false
 	<title>Café Vie Privée</title>
 	<subtitle>Chiffrofête / Cryptoparty organisées à Paris et ailleurs</subtitle>
 	<link href="<%=  URI.join config[:site_url], url_for('/') %>"/>
-	<updated>2014-05-26T00:00:00+02:00</updated>
+	<updated>2014-08-05T00:00:00+02:00</updated>
 
 	<entry>
 		<title>Café Vie Privée à Numa le samedi 29 mars 2014 de 15h à 18h</title>
@@ -42,5 +42,10 @@ layout: false
 		<title>Café Vie Privée à Pas Sage en Seine du jeudi 26 au dimanche 29 juin 2014 de 11h à 18h</title>
 		<updated>2014-05-26T00:00:00+02:00</updated>
 		<link href="http://www.passageenseine.org/" />
+	</entry>
+	<entry>
+		<title>Café Vie Privée à la Bellevilloise le mercredi 3 septembre 2014 à partir de 18h</title>
+		<updated>2014-08-05T00:00:00+02:00</updated>
+		<link href="http://www.labellevilloise.com/2014/06/la-prairie-des-hackers/" />
 	</entry>
 </feed>
