--- a/source/index.erb
+++ b/source/index.erb
@@ -30,15 +30,9 @@ layout: home
 			<i>Prochains Cafés Vie Privée</i> :
 			<ul>
 				<li>
-					 samedi et dimanche <b>14 et 15 juin</b> 2014, <b>11h-18h</b>, au
-					<b><a href="http://poop.leloop.org/">
-						Poop - Portes Ouvertes Ou Pas
-					</a></b>
-				</li>
-				<li>
-					du jeudi <b>26</b> au dimanche <b>29 juin</b> 2014, <b>11h-18h</b>, à
-					<b><a href="http://www.passageenseine.org/">
-						Pas Sage En Seine 2014
+					mercredi <b>3 septembre</b> 2014, <b>18h</b>, à
+					<b><a href="http://www.labellevilloise.com/2014/06/la-prairie-des-hackers/">
+						la Bellevilloise
 					</a></b>
 				</li>
 			</ul>
