--- a/source/atom.xml.erb
+++ b/source/atom.xml.erb
@@ -43,4 +43,9 @@ layout: false
 		<updated>2014-05-26T00:00:00+02:00</updated>
 		<link href="http://www.passageenseine.org/" />
 	</entry>
+	<entry>
+		<title>Café Vie Privée chez Mozilla le samedi 14 mars 2015 de 14h à 18h</title>
+		<updated>2015-03-11T00:00:00+02:00</updated>
+		<link href="https://reps.mozilla.org/e/cafe-vie-privee/" />
+	</entry>
 </feed>
