Ajout des anciens événements dans le flux Atom.

--- a/source/atom.xml.erb
+++ b/source/atom.xml.erb
@@ -43,6 +43,32 @@ layout: false
 		<updated>2014-05-26T00:00:00+02:00</updated>
 		<link href="http://www.passageenseine.org/" />
 	</entry>
+
+	<entry>
+		<title>Café Vie Privée à la Bellevilloise le mercredi 3 septembre 2014 à partir de 18h</title>
+		<updated>2014-08-05T00:00:00+02:00</updated>
+		<link href="http://www.labellevilloise.com/2014/06/la-prairie-des-hackers/" />
+	</entry>
+	<entry>
+		<title>Café Vie Privée à Mozilla Paris le samedi 18 octobre 2014 à partir de 13h</title>
+		<updated>2014-10-17T00:00:00+02:00</updated>
+		<link href="https://events.mozspaces.org/e/403/20141018130000/chiffrofete" />
+	</entry>
+	<entry>
+		<title>Café Vie Privée à l'Ubuntu Party du samedi 15 au dimanche 16 novembre 2014 de 11h à 18h</title>
+		<updated>2014-10-17T00:00:00+02:00</updated>
+		<link href="http://ubuntu-paris.org/#map" />
+	</entry>
+	<entry>
+		<title>Café Vie Privée à Numa le samedi 21 février 2015 de 14h à 18h</title>
+		<updated>2015-02-11T00:08:00+02:00</updated>
+		<link href="http://events.numa.paris/Evenements/CHIFFROFETE-3.02" />
+	</entry>
+	<entry>
+		<title>Café Vie Privée au dernier bar avant la fin du monde le samedi 28 février 2015 de 14h à 18h</title>
+		<updated>2015-02-11T00:08:00+02:00</updated>
+		<link href="https://list.cryptofribourg.ch/t/chiffrofete-special-le-samedi-28-fevrier-au-dernier-bar-avant-la-fin-du-monde-paris/224" />
+	</entry>
 	<entry>
 		<title>Café Vie Privée chez Mozilla le samedi 14 mars 2015 de 14h à 18h</title>
 		<updated>2015-03-11T00:00:00+02:00</updated>
