Layout des pages annexes.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -12,6 +12,8 @@
 
 	<body role="document">
 		<%= partial 'nav' %>
-		<%= yield %>
+        <div class="container-fluid">
+		    <%= yield %>
+        </div>
 	</body>
 </html>
