--- a/source/_nav.erb
+++ b/source/_nav.erb
@@ -1,9 +1,9 @@
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
 	<div class="container-fluid">
 		<div class="navbar-header">
 			<% link_to '/', class: 'navbar-brand' do %>
 				<%= image_tag 'logo.png' %>
-				Chiffrofête
+				Café Vie Privée
 			<% end %>
 		</div>
 	</div>
