Prochains CVP à définir.

--- a/source/index.erb
+++ b/source/index.erb
@@ -27,15 +27,15 @@ layout: home
 	</div>
 	<div class="row">
 		<div class="col-md-8 col-md-offset-2 alert alert-success">
-			<i>Prochains Cafés Vie Privée</i> :
-			<ul>
-				<li>
-					 samedi <b>14 mars</b> 2015, <b>14h-18h</b>, chez
-					<b><a href="https://reps.mozilla.org/e/cafe-vie-privee/">
-						Mozilla
-					</a></b>
-				</li>
-			</ul>
+			<i>Prochains Cafés Vie Privée</i> : <em>à définir</em>.
+			<!--<ul>-->
+				<!--<li>-->
+					 <!--samedi <b>14 mars</b> 2015, <b>14h-18h</b>, chez-->
+					<!--<b><a href="https://reps.mozilla.org/e/cafe-vie-privee/">-->
+						<!--Mozilla-->
+					<!--</a></b>-->
+				<!--</li>-->
+			<!--</ul>-->
 		</div>
 	</div>
 </div>
