Automatize calendar of events

--- a/source/index.erb
+++ b/source/index.erb
@@ -27,7 +27,7 @@ layout: home
 	</div>
 	<div class="row">
 		<div class="col-md-8 col-md-offset-2 alert alert-success">
-			<i>Prochains Cafés Vie Privée</i> : <em>à définir</em>.
+			<%= partial 'calendar' %>
 		</div>
 	</div>
 </div>
