--- a/source/index.erb
+++ b/source/index.erb
@@ -102,7 +102,7 @@ layout: home
 					<tr>
 						<td>
 							<%= image_tag 'ical.png', alt: 'Calendrier' %>
-							<a href="https://calendar.okhin.fr/public.php/chiffrofetes/calendar/">Calendrier</a>
+							<%= link_to 'Calendrier', '/calendar.ics' %>
 						</td>
 						<td>
 							<%= image_tag 'logo.png', alt: 'Wiki' %>
