Change mailing list address and GPG key

--- a/source/index.erb
+++ b/source/index.erb
@@ -92,11 +92,8 @@ layout: home
 						</td>
 						<td>
 							<%= image_tag 'email.png', alt: 'Courriel' %>
-							<a href="mailto:chiffrofetes@okhin.fr">chiffrofetes@okhin.fr</a><br/>
-							(GPG:
-							<a href="http://hkps.pool.sks-keyservers.net/pks/lookup?search=0xD0934505630B1D0A&amp;op=vindex">
-								D0934505 630B1D0A
-							</a>)
+							<a href="mailto:contact@chiffrofete.fr">contact@chiffrofete.fr</a><br/>
+							(GPG: <%= link_to '87F87B18 10FE3C50', '/key.asc' %>)
 						</td>
 					</tr>
 					<tr>
